updata index leadername

--- a/Schedule/src/main/resources/templates/index.html
+++ b/Schedule/src/main/resources/templates/index.html
@@ -50,110 +50,35 @@
 
 			<!--内容显示-->
 			<div id="" class="row-fluid">
-				<!--树形菜单-->
-				<div class="col-md-3 ">
+				
+				<div class="col-md-2 ">
 
-					<!--<nav class="menu" data-ride="menu" style="width: 200px">
-						<ul class="tree tree-menu" id="myTree"></ul>
-					</nav>-->
 					<div class="panel panel-default">
 						<!-- Default panel contents -->
-						<div class="panel-heading text-center">党工委管委会</div>
+						<div class="panel-heading text-center">党工委管委会领导</div>
 
-						<!-- Table -->
+						
 						<ul class="list-group">
-							<li class="list-group-item">Cras justo odio</li>
-							<li class="list-group-item">Dapibus ac facilisis in</li>
-							<li class="list-group-item">Morbi leo risus</li>
-							<li class="list-group-item">Porta ac consectetur ac</li>
-							<li class="list-group-item">Vestibulum at eros</li>
-						</ul>
-						<table class="table">
-							<tr>
-								<td>
-									<a href="#" onclick="clicleader('秦如培')">秦如培</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('马长青')">马长青</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('孙登峰')">孙登峰</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="#" onclick="clicleader('宗文')">宗&nbsp;&nbsp;&nbsp;文</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('曾瑜')">曾&nbsp;&nbsp;&nbsp;瑜</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('欧阳武')">欧阳武</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="#" onclick="clicleader('黄家耀')">黄家耀</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('许剑龙')">许剑龙</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('李建峰')">李建峰</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="#" onclick="clicleader('耿贵刚')">耿贵刚</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('樊晓江')">樊晓江</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('朱克乾')">朱克乾</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="#" onclick="clicleader('金和平')">金和平</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('邓波')">邓&nbsp;&nbsp;&nbsp;波</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('王春雷')">王春雷</a>
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<a href="#" onclick="clicleader('苏永泓')">苏永泓</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('余尚贵')">余尚贵</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('高永昌')">高永昌</a>
-								</td>
-							</tr>
-							<tr>
-
-								<td>
-									<a href="#" onclick="clicleader('兰芸')">兰&nbsp;&nbsp;&nbsp;芸</a>
-								</td>
-
-								<td>
-									<a href="#" onclick="clicleader('陈东')">陈&nbsp;&nbsp;&nbsp;东</a>
-								</td>
-								<td>
-									<a href="#" onclick="clicleader('刘安军')">刘安军</a>
-								</td>
-							</tr>
+							<li class="list-group-item"><a href="#" onclick="clicleader('秦如培')">秦如培</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('马长青')">马长青</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('孙登峰')">孙登峰</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('宗文')">宗&nbsp;&nbsp;&nbsp;文</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('曾瑜')">曾&nbsp;&nbsp;&nbsp;瑜</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('欧阳武')">欧阳武</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('黄家耀')">黄家耀</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('许剑龙')">许剑龙</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('李建峰')">李建峰</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('耿贵刚')">耿贵刚</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('樊晓江')">樊晓江</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('朱克乾')">朱克乾</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('金和平')">金和平</a></li>
+							<li class="list-group-item"><a href="#" onclick="clicleader('邓波')">邓&nbsp;&nbsp;&nbsp;波</a></li>
 							
-						</table>
+						</ul>
 					</div>
 				</div>
 				<!--内容显示-->
-				<div class="col-md-9 " style="">
+				<div class="col-md-10 " style="">
 					<div class="panel panel-default">
 						<div class="panel-heading container">
 							<div class="pull-left" style="margin:5px 0"><span id="leaderName">_____工作日程</span></div>
