--- a/Schedule/src/main/resources/templates/index.html
+++ b/Schedule/src/main/resources/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <html>
 
 <head>
@@ -15,6 +15,7 @@
 <script src="js/zui1.7.0/js/zui.min.js"></script>
 <script src="js/zui1.7.0/lib/calendar/zui.calendar.min.js"></script>
 <script src="js/myjs.js"></script>
+<script src="js/jquery.table2excel.js"></script>
 <script src="js/GetCNDate.js"></script>
 
 </head>
@@ -28,12 +29,35 @@
 				style="position: relative; top: 8px;" id="nowtime"></div>
 
 			<button class="topdiv btn btn-primary" id="download"
-				onclick="window.location.href='download'">模板下载</button>
+				onclick="window.location.href='download'">日程模板下载</button>
 
 			<button class=" topdiv btn btn-default " data-toggle="modal"
 				data-target="#inputModal">日程导入</button>
 
-			<button class=" btn btn-warning" onclick="outFile()">日程导出</button>
+            <button type="button" class="btn btn-warning" onclick="showAgendaDownloadModal()">
+                <i class="icon icon-download-alt"></i>
+                日程下载
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="agendaDownlaodModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title" id="myModalLabel">当前下载的日程是:</h4>
+                        </div>
+                        <div id="agendaInfo" class="modal-body">
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                            <button type="button" class="btn btn-primary" onclick="outputTableToExcel('agenda_tb')"><i class="icon icon-download-alt"></i>下载</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 			<div class="modal fade" id="inputModal">
 				<div class="modal-dialog">
 					<div class="modal-header">
@@ -122,7 +146,7 @@
 					</div>
 					<div class="panel-body">
 
-						<table class="table table-bordered agenda_table" border="0"
+						<table id="agenda_tb" class="table table-bordered agenda_table" border="0"
 							align="center">
 							<thead>
 								<tr>
