Add an header info on agenda webpage

--- a/Schedule/src/main/resources/templates/index.html
+++ b/Schedule/src/main/resources/templates/index.html
@@ -24,7 +24,19 @@
 	<div class="">
 		<!--最顶部-->
 		<div class="top-my ">
-
+			<form class="navbar-form ">
+                    <div class="container-fluid">
+                        <div class="row-fluid">
+                            <div class="span12">
+                                <div class="page-header">
+                                    <h1>
+                                        领导日程 <small></small>
+                                    </h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+				</form>
 			<div class="topdiv text-center content "
 				style="position: relative; top: 8px;" id="nowtime"></div>
 
