modify all webserver

--- a/Schedule/src/main/resources/templates/index.html
+++ b/Schedule/src/main/resources/templates/index.html
@@ -109,7 +109,7 @@
 				<div class="panel panel-default">
 					<div class="panel-heading container">
 						<div class="pull-left" style="margin: 5px 0">
-							<span id="leaderName"></span>
+							<span id="leaderName">所有领导的工作日程</span>
 						</div>
 						<div class="pull-left" style="margin: 5px 58px;">
 							<span id="gettime">2017年8月28日~2017年9月3日</span>
@@ -133,7 +133,7 @@
 							<thead>
 								<tr>
 									<th style="text-align: center;"><strong>时间</strong></th>
-									<th style="text-align: center;"><strong>领导姓名</strong></th>
+									<th style="text-align: center;"><strong>领导</strong></th>
 									<th style="text-align: center;"><strong>时间</strong><strong>&nbsp;</strong>
 									</th>
 									<th style="text-align: center;"><strong>日程内容</strong></th>
