chang time to date

--- a/Schedule/src/main/resources/templates/index.html
+++ b/Schedule/src/main/resources/templates/index.html
@@ -137,7 +137,7 @@
 							align="center">
 							<thead>
 								<tr>
-									<th style="text-align: center;"><strong>时间</strong></th>
+									<th style="text-align: center;"><strong>日期</strong></th>
 									<th style="text-align: center;"><strong>领导</strong></th>
 									<th style="text-align: center;"><strong>时间</strong><strong>&nbsp;</strong>
 									</th>
