index.html button add type=button

--- a/Schedule/src/main/resources/templates/index.html
+++ b/Schedule/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
 				<div class="topdiv text-center content "
 					style="position: relative; top: 8px;" id="nowtime"></div>
 
-				<button class="topdiv btn btn-primary" id="download"
+				<button class="topdiv btn btn-primary" type="button" id="download"
 					onclick="window.location.href='download'">日程模板下载</button>
 
 				<button type="button" class=" topdiv btn btn-default " data-toggle="modal"
