--- a/Schedule/src/main/resources/templates/index.html
+++ b/Schedule/src/main/resources/templates/index.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                            <button type="button" class="btn btn-primary" onclick="outputTableToExcel('agenda_tb')"><i class="icon icon-download-alt"></i>下载</button>
+                            <button type="button" class="btn btn-primary" onclick="downloadAgenda()"><i class="icon icon-download-alt"></i>下载</button>
                         </div>
                     </div>
                 </div>
